# dotfiles-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
data/: dotfiles.yaml
src/: cli.rs  lib.rs  main.rs  path.rs  readme_template.rs
