[package]
name = "dotfiles-rs"
author = "wckdouglas"
version = "0.1.2"
edition = "2021"
description = "A simple dot files manager for syncing dot files across machines."
license = " Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/wckdouglas/dotfiles-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-yaml = "3.0.0"
clap = "3.2.22"
dirs = "4.0.0"
env_logger = "0.9.1"
git2 =  "0.14.0" # { git = "https://github.com/rust-lang/git2-rs" }
log = "0.4.17"
rayon = "1.5.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
serde_yaml = "0.9.13"
